# pieces

./: .gitignore  Makefile  README.md  pyproject.toml
pieces/: checks.py
pieces/ntheory/: __init__.py  canon.py  factorization.py  functions.py  primes.py
tests/: test_factorization.py  test_functions.py  test_primes.py
