[tool.poetry]
name = "pieces"
version = "0.4.0"
description = "Pieces of math"
authors = ["Valery Kocubinsky"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
ipython = "^8"
isort = "^5"
black = "^22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
